--- a/index.html
+++ b/index.html
@@ -51,26 +51,28 @@
             </ul>
         </div>
 
-        <div class="slide">
-            <div class="item"><img src="./images/slide1.jpg" alt="15% 할인"></div>
-            <div class="item"><img src="./images/slide2.jpg" alt="오픈 이벤트"></div>
-            <div class="item"><img src="./images/slide3.jpg" alt="1+1 15프로 할인"></div>
+        <div class="slider">
+            <div class="slide">
+                <div class="item"><img src="./images/slide1.jpg" alt="15% 할인"></div>
+                <div class="item"><img src="./images/slide2.jpg" alt="오픈 이벤트"></div>
+                <div class="item"><img src="./images/slide3.jpg" alt="1+1 15프로 할인"></div>
+            </div>
         </div>
 
         <div class="contents">
-            <div class="board">
-                <div class="notice">
-                    <h2><a href="#">공지사항</a></h2>
-                    <ul>
+            <div class="tab">
+                <div class="tab_title">
+                    <h2><a href="#" class="on">공지사항</a></h2>
+                    <h2><a href="#">갤러리</a></h2>
+                </div>
+                <div class="tab_contents">
+                    <ul class="notice">
                         <li><a href="#">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 사용안내 2021년 2월 무이자 할부 카드 안내</a></li>
                         <li><a href="#">쿠폰 다운로드&사용방법</a></li>
                         <li><a href="#">모바일 APP설치하고 10%할인쿠폰받자!! 2021년 2월 무이자 할부 카드 안내</a></li>
                     </ul>
-                </div>
-                <div class="gallery">
-                    <h2><a href="#">갤러리</a></h2>
-                    <ul>
+                    <ul class="gallery">
                         <li><a href="#"><img src="./images/gallery1.jpg" alt="첫번째 갤러리 이미지"></a></li>
                         <li><a href="#"><img src="./images/gallery2.jpg" alt="두번째 갤러리 이미지"></a></li>
                         <li><a href="#"><img src="./images/gallery3.jpg" alt="세번째 갤러리 이미지"></a></li>
