--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                 </div>
             </div>
             <div class="banner">
-                <h2>배너</h2>
+                <h2 class="blind">배너</h2>
                 <div class="banner_img">
                     <a href="#"><img src="./images/banner.jpg" alt=""></a>
                 </div>
             </div>
             <div class="link">
-                <h2>바로가기</h2>
+                <h2 class="blind">바로가기</h2>
                 <div class="items">
                     <a href="#">나의 계정</a>
                     <a href="#">헤이 음악</a>
